############################################################################

BUILT_SOURCES = \
	drawstyle.cpp \
	material.cpp \
	selection.cpp \
	slideshow.cpp \
	sphere.cpp \
	spherecolor.cpp \
	rotation.cpp \
	scale.cpp \
	translation.cpp \
	transform.cpp \
	rotor.cpp \
	directionallight.cpp \
	pointlight.cpp \
	spotlight.cpp \
	lights.cpp \
	faceset.cpp \
	facesetindexed.cpp \
	quadmesh.cpp \
	trianglestripset.cpp \
	camera.cpp \
	blinker.cpp \
	texture.cpp \
	texture3.cpp \
	environment.cpp \
	atmospheric.cpp \
	shuttle.cpp \
	complexity.cpp \
	text2.cpp \
	text3.cpp \
	clipplane.cpp \
	levelofdetail.cpp \
	extselection.cpp \
	pointset.cpp \
	markerset.cpp



noinst_PROGRAMS = \
        drawstyle material selection slideshow sphere spherecolor \
        rotation scale translation transform rotor \
        directionallight pointlight spotlight lights \
        faceset facesetindexed quadmesh trianglestripset \
        camera blinker texture texture3 environment atmospheric shuttle \
        complexity text2 text3 clipplane levelofdetail extselection \
        pointset markerset

drawstyle_SOURCES = drawstyle.cpp
material_SOURCES = material.cpp
selection_SOURCES = selection.cpp
slideshow_SOURCES = slideshow.cpp
sphere_SOURCES = sphere.cpp
spherecolor_SOURCES = spherecolor.cpp
rotation_SOURCES = rotation.cpp
scale_SOURCES = scale.cpp
translation_SOURCES = translation.cpp
transform_SOURCES = transform.cpp
rotor_SOURCES = rotor.cpp
directionallight_SOURCES = directionallight.cpp
pointlight_SOURCES = pointlight.cpp
spotlight_SOURCES = spotlight.cpp
lights_SOURCES = lights.cpp
faceset_SOURCES = faceset.cpp
facesetindexed_SOURCES = facesetindexed.cpp
quadmesh_SOURCES = quadmesh.cpp
trianglestripset_SOURCES = trianglestripset.cpp
camera_SOURCES = camera.cpp
blinker_SOURCES = blinker.cpp
texture_SOURCES = texture.cpp
texture3_SOURCES = texture3.cpp
environment_SOURCES = environment.cpp
atmospheric_SOURCES = atmospheric.cpp
shuttle_SOURCES = shuttle.cpp
complexity_SOURCES = complexity.cpp
text2_SOURCES = text2.cpp
text3_SOURCES = text3.cpp
clipplane_SOURCES = clipplane.cpp
levelofdetail_SOURCES = levelofdetail.cpp
extselection_SOURCES = extselection.cpp
pointset_SOURCES = pointset.cpp
markerset_SOURCES = markerset.cpp

############################################################################

texture3.cpp: $(srcdir)/texture3.cpp.in
	@( cd $(top_builddir); ./config.status --file=nodes/texture3.cpp )

drawstyle.cpp: $(srcdir)/drawstyle.cpp.in
	@( cd $(top_builddir); ./config.status --file=nodes/drawstyle.cpp)

material.cpp: $(srcdir)/material.cpp.in
	@( cd $(top_builddir); ./config.status --file=nodes/material.cpp)

selection.cpp: $(srcdir)/selection.cpp.in
	@( cd $(top_builddir); ./config.status --file=nodes/selection.cpp)

slideshow.cpp: $(srcdir)/slideshow.cpp.in
	@( cd $(top_builddir); ./config.status --file=nodes/slideshow.cpp)

sphere.cpp: $(srcdir)/sphere.cpp.in
	@( cd $(top_builddir); ./config.status --file=nodes/sphere.cpp)

spherecolor.cpp: $(srcdir)/spherecolor.cpp.in
	@( cd $(top_builddir); ./config.status --file=nodes/spherecolor.cpp)

rotation.cpp: $(srcdir)/rotation.cpp.in
	@( cd $(top_builddir); ./config.status --file=nodes/rotation.cpp)

scale.cpp: $(srcdir)/scale.cpp.in
	@( cd $(top_builddir); ./config.status --file=nodes/scale.cpp)

translation.cpp: $(srcdir)/translation.cpp.in
	@( cd $(top_builddir); ./config.status --file=nodes/translation.cpp)

transform.cpp: $(srcdir)/transform.cpp.in
	@( cd $(top_builddir); ./config.status --file=nodes/transform.cpp)

rotor.cpp: $(srcdir)/rotor.cpp.in
	@( cd $(top_builddir); ./config.status --file=nodes/rotor.cpp)

directionallight.cpp: $(srcdir)/directionallight.cpp.in
	@( cd $(top_builddir); ./config.status --file=nodes/directionallight.cpp)

pointlight.cpp: $(srcdir)/pointlight.cpp.in
	@( cd $(top_builddir); ./config.status --file=nodes/pointlight.cpp)

spotlight.cpp: $(srcdir)/spotlight.cpp.in
	@( cd $(top_builddir); ./config.status --file=nodes/spotlight.cpp)

lights.cpp: $(srcdir)/lights.cpp.in
	@( cd $(top_builddir); ./config.status --file=nodes/lights.cpp)

faceset.cpp: $(srcdir)/faceset.cpp.in
	@( cd $(top_builddir); ./config.status --file=nodes/faceset.cpp)

facesetindexed.cpp: $(srcdir)/facesetindexed.cpp.in
	@( cd $(top_builddir); ./config.status --file=nodes/facesetindexed.cpp)

quadmesh.cpp: $(srcdir)/quadmesh.cpp.in
	@( cd $(top_builddir); ./config.status --file=nodes/quadmesh.cpp)

trianglestripset.cpp: $(srcdir)/trianglestripset.cpp.in
	@( cd $(top_builddir); ./config.status --file=nodes/trianglestripset.cpp)

camera.cpp: $(srcdir)/camera.cpp.in
	@( cd $(top_builddir); ./config.status --file=nodes/camera.cpp)

blinker.cpp: $(srcdir)/blinker.cpp.in
	@( cd $(top_builddir); ./config.status --file=nodes/blinker.cpp)

texture.cpp: $(srcdir)/texture.cpp.in
	@( cd $(top_builddir); ./config.status --file=nodes/texture.cpp)

environment.cpp: $(srcdir)/environment.cpp.in
	@( cd $(top_builddir); ./config.status --file=nodes/environment.cpp)

atmospheric.cpp: $(srcdir)/atmospheric.cpp.in
	@( cd $(top_builddir); ./config.status --file=nodes/atmospheric.cpp)

shuttle.cpp: $(srcdir)/shuttle.cpp.in
	@( cd $(top_builddir); ./config.status --file=nodes/shuttle.cpp)

complexity.cpp: $(srcdir)/complexity.cpp.in
	@( cd $(top_builddir); ./config.status --file=nodes/complexity.cpp)

text2.cpp: $(srcdir)/text2.cpp.in
	@( cd $(top_builddir); ./config.status --file=nodes/text2.cpp)

text3.cpp: $(srcdir)/text3.cpp.in
	@( cd $(top_builddir); ./config.status --file=nodes/text3.cpp)

clipplane.cpp: $(srcdir)/clipplane.cpp.in
	@( cd $(top_builddir); ./config.status --file=nodes/clipplane.cpp)

levelofdetail.cpp: $(srcdir)/levelofdetail.cpp.in
	@( cd $(top_builddir); ./config.status --file=nodes/levelofdetail.cpp)

extselection.cpp: $(srcdir)/extselection.cpp.in
	@( cd $(top_builddir); ./config.status --file=nodes/extselection.cpp)

pointset.cpp: $(srcdir)/pointset.cpp.in
	@( cd $(top_builddir); ./config.status --file=nodes/pointset.cpp)

markerset.cpp: $(srcdir)/markerset.cpp.in
	@( cd $(top_builddir); ./config.status --file=nodes/markerset.cpp)

############################################################################
