############################################################################
# make from *.in files

BUILT_SOURCES = audiocallback.cpp manysources.cpp

############################################################################
# executables

noinst_PROGRAMS = audiocallback manysources

############################################################################
# source code dependencies

audiocallback_SOURCES = audiocallback.cpp

manysources_SOURCES = manysources.cpp

############################################################################
